--- a/planets.html
+++ b/planets.html
@@ -90,7 +90,7 @@
                 </p>
                 
                 <a class="carl" href="https://solarsystem.nasa.gov/people/660/carl-sagan-1934-1996/" target="_blank">
-                    <p>Life beyond Earth?... Investigation and Research...</p>
+                    <p class="carl">Life beyond Earth?... Investigation and Research...</p>
                 </a>
                 <div class="end-extra">
                     <a class="back" href="#DeepSpace">BACK TO TOP</a>
