--- a/planets.html
+++ b/planets.html
@@ -88,10 +88,11 @@
                     The days and seasons are comparable to those of Earth, because the rotational period as well as the tilt of the rotational axis relative to the ecliptic plane are similar. Mars is the site of Olympus Mons, the largest volcano and highest known mountain on any planet in the Solar System, and of Valles Marineris, one of the largest canyons in the Solar System. The smooth Borealis basin in the Northern Hemisphere covers 40% of the planet and may be a giant impact feature. Mars has two moons, Phobos and Deimos, which are small and irregularly shaped. These may be captured asteroids, similar to 5261 Eureka, a Mars trojan.
 
                 </p>
-                
-                <a class="carl" href="https://solarsystem.nasa.gov/people/660/carl-sagan-1934-1996/" target="_blank">
-                    <p class="carl">Life beyond Earth?... Investigation and Research...</p>
-                </a>
+                <p class="carl">
+                    <a class="carlMargin" href="https://solarsystem.nasa.gov/people/660/carl-sagan-1934-1996/" target="_blank">
+                    Life beyond Earth?... Investigation and Research...
+                    </a>
+                </p>    
                 <div class="end-extra">
                     <a class="back" href="#DeepSpace">BACK TO TOP</a>
                     <a class="travel" href="https://solarsystem.nasa.gov/solar-system/our-solar-system/overview/" target="_blank">KEEP TARVELING...</a>
