ready-to-go-Live

--- a/planets.html
+++ b/planets.html
@@ -102,7 +102,7 @@
         </div>
 
         <footer>
-                <p class="f-p">© Copyright 1121. All Rights Reserved. | By Fede, because I live in the moon</p>
+                <p class="f-p">© Copyright 1121. All Rights Reserved. | By Fede</p>
         </footer>
 
     </body>
